--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">app-juego-memoria</string>
-    <string name="title_activity_main">app-juego-memoria</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="app_name">Juego Memoria</string>
+    <string name="title_activity_main">Juego Memoria</string>
+    <string name="package_name">io.ionic.juegoMemoria</string>
+    <string name="custom_url_scheme">io.ionic.juegoMemoria</string>
 </resources>
